--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ Makefile
 *.ort
 onnxruntime*.tar.gz
 ThirdParty/onnxruntime
+Lib/ModelData/features_model.required_operators.config
+Lib/ModelData/features_model.required_operators.with_runtime_opt.config
