--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ xcschememanagement.plist
 Makefile
 *.ort
 onnxruntime*.tar.gz
-ThirdParty/onnxruntime
+ThirdParty/onnxruntime*
 /Installers/Windows/Output/
 Lib/ModelData/features_model.required_operators.config
 Lib/ModelData/features_model.required_operators.with_runtime_opt.config
